[tool.poetry]
name = "fastapi-tdd"
version = "0.1.0"
description = "Estudos sobre TDD com FastAPI"
authors = ["mugubr <miguimuniz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
motor = "^3.3.2"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
